Removed tabs.